Improve user-interface on index page and fix carousel images alignment

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -20,6 +20,8 @@ h1 {
 h2 {
     font-size: 18px;
     font-family: 'Roboto', sans-serif;
+    letter-spacing: 1px;
+    font-weight: bold !important;
 }
 
 h3 {
@@ -36,6 +38,20 @@ li{
     font-size: 1.4em;
 }
 
+a {
+    color: #823ded;
+}
+
+a:hover {
+    text-decoration: none;
+    color: #542799;
+}
+
+input:focus {
+    outline:0 !important;
+    -webkit-focus-ring-color: none !important;
+}
+
 .align-left {
     float: left;
 }
@@ -50,12 +66,14 @@ li{
 .btn-navbar{
     margin-left: 5px;
     background-color: rgba(130,61,237,1);
-    color: white !important;
+    color: #ffffff !important;
 }
 
 .btn-navbar:hover {
+    color: #ffffff !important;
     background-color: #542799 !important;
 }
+
 
 .navbar {
     padding-right: 50px;
@@ -66,10 +84,6 @@ li{
 
 .nav-item {
     margin-right: 10px;
-}
-
-.nav-item:hover a {
-    color: #823ded !important;
 }
 
 .nav-link {
